# pygraze

./: .gitignore  pyproject.toml
src/pygraze/: __init__.py
src/pygraze.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pygraze/experiments/: grazing.py
